--- a/src/BaroquenMelody.App/wwwroot/index.html
+++ b/src/BaroquenMelody.App/wwwroot/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="BaroquenMelody.App.styles.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <link href="_content/CodeBeam.MudBlazor.Extensions/MudExtensions.min.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
 </head>
 
@@ -28,7 +29,7 @@
 
     <script src="_framework/blazor.webview.js" autostart="false"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
-
+    <script src="_content/CodeBeam.MudBlazor.Extensions/MudExtensions.min.js"></script>
 </body>
 
 </html>
