--- a/src/BaroquenMelody.App/wwwroot/index.html
+++ b/src/BaroquenMelody.App/wwwroot/index.html
@@ -30,6 +30,11 @@
     <script src="_framework/blazor.webview.js" autostart="false"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="_content/CodeBeam.MudBlazor.Extensions/MudExtensions.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/combine/npm/tone@14.7.58,npm/@magenta/music@1.23.1/es6/core.js,npm/focus-visible@5,npm/html-midi-player@1.5.0"></script>
+    <script type="text/javascript">
+        function stopMidiPlayer(player) {
+            player.stop();
+        }
+    </script>
 </body>
-
 </html>
